proj-sorting